--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,28 @@
+
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+#container{
+  display: block;
+
+
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 200px 200px 200px;
+  grid-template-rows: 200px 200px 200px;
+  padding-left: 30%;
+
+
+}
+
+.space{
+  border-color: black;
+  border-style: solid;
+  border-width: 5px;
+  font-size: 75px;
+  text-align: center;
+
+}
+
+
