--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,9 +1,14 @@
 
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+
 #container{
   display: block;
-
+  width: auto;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -11,18 +16,23 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
   display: grid;
   grid-template-columns: 200px 200px 200px;
   grid-template-rows: 200px 200px 200px;
-  padding-left: 30%;
+  // padding-left: 30%;
 
 
 }
 
 .space{
-  border-color: black;
+  border-color: white;
   border-style: solid;
   border-width: 5px;
   font-size: 75px;
   text-align: center;
+  padding-top: 25%;
+  color: white;
+
 
 }
 
-
+body{
+  background-color: black;
+}
