--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,22 +2,37 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
-
-#container{
-  display: block;
-  width: auto;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-
+* {
+  margin: 0;
+  padding: 0;
 }
 
+h1{
+  font-size: 40pt;
+  text-align: center;
+  color: white;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  padding-top: 20px;
+}
+
+#container{
+  margin-top: 35px;
+  display: block;
+  height: 600px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+
 .wrapper {
+
   display: grid;
   grid-template-columns: 200px 200px 200px;
   grid-template-rows: 200px 200px 200px;
   // padding-left: 30%;
-
 
 }
 
@@ -29,10 +44,25 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
   text-align: center;
   padding-top: 25%;
   color: white;
-
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
 }
 
 body{
   background-color: black;
+}
+
+#winBox{
+  display: block;
+  height: 100px;
+  width: 600px;
+  background-color: white;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 40px;
+  font-size: 40pt;
+  text-align: center;
+  padding-top: 15px;
+  border-radius: 10px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
