--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,6 +10,15 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 * {
   margin: 0;
   padding: 0;
+
+}
+
+body{
+  // background-image: url('https://i.ytimg.com/vi/pMSvaHnYVU8/maxresdefault.jpg');
+  background-image: url('https://pre00.deviantart.net/d1b5/th/pre/f/2011/292/9/9/tron_grid_wallpaper_1680x1050_by_sarah_hextall_design-d4dajzv.jpg');
+  background-size: 100% 100%;
+  height: 100%;
+  width: 100%;
 }
 
 
@@ -17,13 +26,12 @@ h1{
   font-size: 60pt;
   text-align: center;
   color: white;
-  // font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-family: neon;
   padding-top: 5px;
 }
 
 #container{
-  margin-top: 35px;
+  margin-top: 70px;
   display: block;
   height: 600px;
   width: 600px;
@@ -40,6 +48,8 @@ h1{
   grid-template-columns: 200px 200px 200px;
   grid-template-rows: 200px 200px 200px;
   // padding-left: 30%;
+  border-radius: 20px;
+  box-shadow: 0 0 .25vw #1041FF, 0 0 .75w #1041FF, 0 0 2.5vw #1041FF, 0 0 2.5vw #1041FF, 0 0 .1vw #8BFDFE;
 
 }
 
@@ -91,13 +101,39 @@ body{
   // background-color: white;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 20px;
-  font-size: 40pt;
+  margin-top: 30px;
+  font-size: 35pt;
   text-align: center;
-  padding-top: 5px;
+
   border-radius: 10px;
   font-family: neon;
   // font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+#xScores{
+  display: block;
+  // height: 80px;
+  // width: 200px;
+  // background-color: white;
+  font-size: 45pt;
+  font-family: neon;
+  float: left;
+  bottom: 200px;
+  margin-left: 2%;
+
+}
+
+#oScores{
+  display: block;
+  // height: 80px;
+  // width: 200px;
+  // background-color: white;
+  font-size: 45pt;
+  font-family: neon;
+  float: right;
+  bottom: 200px;
+  margin-right: 50px;
+
 }
 
 #title{
