--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,7 +14,6 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 }
 
 body{
-  // background-image: url('https://i.ytimg.com/vi/pMSvaHnYVU8/maxresdefault.jpg');
   background-image: url('https://pre00.deviantart.net/d1b5/th/pre/f/2011/292/9/9/tron_grid_wallpaper_1680x1050_by_sarah_hextall_design-d4dajzv.jpg');
   background-size: 100% 100%;
   height: 100%;
@@ -47,14 +46,12 @@ h1{
   display: grid;
   grid-template-columns: 200px 200px 200px;
   grid-template-rows: 200px 200px 200px;
-  // padding-left: 30%;
   border-radius: 20px;
   box-shadow: 0 0 .25vw #1041FF, 0 0 .75w #1041FF, 0 0 2.5vw #1041FF, 0 0 2.5vw #1041FF, 0 0 .1vw #8BFDFE;
 
 }
 
 .space{
-  // border-color: #2356FF;
   border-color: rgba(35, 194, 230, 0.747);
 
   border-style: ridge;
@@ -62,13 +59,8 @@ h1{
   font-size: 90px;
   text-align: center;
   padding-top: 20px;
-  // color: white;
-  // font-family: neon;
-
-  //neon option
   font-family: neon;
-  // color: white;
-  // font-size: 9vw;
+
 }
 
 
@@ -98,7 +90,6 @@ body{
   display: block;
   height: 80px;
   width: 200px;
-  // background-color: white;
   margin-right: auto;
   margin-left: auto;
   margin-top: 30px;
@@ -107,14 +98,10 @@ body{
 
   border-radius: 10px;
   font-family: neon;
-  // font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 #xScores{
   display: block;
-  // height: 80px;
-  // width: 200px;
-  // background-color: white;
   font-size: 45pt;
   font-family: neon;
   float: left;
@@ -125,9 +112,6 @@ body{
 
 #oScores{
   display: block;
-  // height: 80px;
-  // width: 200px;
-  // background-color: white;
   font-size: 45pt;
   font-family: neon;
   float: right;
@@ -198,14 +182,6 @@ body{
 }
 
 
-
-
-
-
-
-//neon test
-
-
 .neon {
   font-family: neon;
   color: #FB4264;
@@ -257,4 +233,47 @@ body{
     text-shadow: 0 0 .5vw #082180, 0 0 1.5vw #082180, 0 0 5vw #082180, 0 0 5vw #082180, 0 0 .2vw #082180, .5vw .5vw .1vw #0A3940;
     color: #146C80;
   }
+}
+
+//modal secion
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 5; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  border-radius: 10px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  height: 600px;
+  border-radius: 10px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
