--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -86,19 +86,44 @@ body{
   font-family: neon;
 }
 
+#menu{
+  text-align: center;
+  height: 100px;
+  width: 100%;
+  display: inline-block;
+}
+
+
 #reset{
-  display: block;
   height: 80px;
   width: 200px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 30px;
+  // margin-right: auto;
+  // margin-left: auto;
+  // margin-top: 30px;
   font-size: 35pt;
   text-align: center;
-
   border-radius: 10px;
   font-family: neon;
+  display: inline-block;
+
 }
+
+
+#signIn{
+  display: block;
+  height: 80px;
+  width: 300px;
+  float: left;
+}
+
+#signOut{
+  display: block;
+  height: 80px;
+  width: 300px;
+  float: right;
+}
+
+
 
 #xScores{
   display: block;
@@ -185,7 +210,7 @@ body{
 .neon {
   font-family: neon;
   color: #FB4264;
-  font-size: 9vw;
+  font-size: 35pt;
   // line-height: 9vw;
   text-shadow: 0 0 0vw #F40A35;
 }
@@ -254,26 +279,43 @@ body{
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
-  margin: 10% auto; /* 15% from the top and centered */
+  background-color: black;
+  border-color: rgba(35, 194, 230, 0.747);
+  margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-  height: 600px;
+  border-style: solid;
+  border-width: 5px;
+  width: 65%; /* Could be more or less, depending on screen size */
+  height: 400px;
   border-radius: 10px;
 }
 
 /* The Close Button */
 .close {
-  color: #aaa;
+  color: orange;
   float: right;
   font-size: 28px;
   font-weight: bold;
+
 }
 
 .close:hover,
 .close:focus {
-  color: black;
+  color: rgba(255, 166, 0, 0.568);
   text-decoration: none;
   cursor: pointer;
 }
+
+legend{
+  font-family: neon;
+  color: rgba(35, 194, 230, 0.747);
+  font-size: 35pt;
+}
+
+fieldset{
+  font-size: 17pt;
+  font-family: arial;
+}
+
+
+//end of modal
