--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -278,19 +278,44 @@ body{
   border-radius: 10px;
 }
 
+.outModal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 5; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  border-radius: 10px;
+}
+
 /* Modal Content/Box */
 .modal-content {
   background-color: black;
   border-color: rgba(35, 194, 230, 0.747);
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 8% auto; /* 15% from the top and centered */
   padding: 20px;
   border-style: solid;
   border-width: 5px;
   width: 65%; /* Could be more or less, depending on screen size */
-  height: 400px;
+  height: 600px;
   border-radius: 10px;
 }
 
+.out-modal-content {
+  background-color: black;
+  border-color: rgba(35, 194, 230, 0.747);
+  margin: 8% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border-style: solid;
+  border-width: 5px;
+  width: 65%; /* Could be more or less, depending on screen size */
+  height: 600px;
+  border-radius: 10px;
+}
 /* The Close Button */
 .close {
   color: orange;
@@ -310,7 +335,7 @@ body{
 legend{
   font-family: neon;
   color: rgba(35, 194, 230, 0.747);
-  font-size: 35pt;
+  font-size: 30pt;
 }
 
 fieldset{
