--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -81,12 +81,12 @@ body{
 
   display: block;
   height: 100px;
-  width: 600px;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
   font-size: 50pt;
   text-align: center;
-  padding-top: 15px;
+  padding-top: 8px;
   border-radius: 10px;
 
 
@@ -98,11 +98,12 @@ body{
   width: 100%;
   display: inline-block;
   margin-top: 20px;
+  padding-bottom: -20px;
 }
 
 
 #reset{
-  height: 80px;
+  height: 70px;
   width: 200px;
   // margin-right: auto;
   // margin-left: auto;
