working GET and display of game history

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -20,6 +20,13 @@ body{
   width: 100%;
 }
 
+#gameHistory{
+  background-color: white;
+  height: 500px;
+  width: 100%;
+  display: block;
+}
+
 #newGame{
   position: fixed;
   background: transparent;
