--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -20,12 +20,7 @@ body{
   width: 100%;
 }
 
-#gameHistory{
-  background-color: white;
-  height: 500px;
-  width: 100%;
-  display: block;
-}
+
 
 #newGame{
   position: fixed;
@@ -115,7 +110,7 @@ body{
   // margin-right: auto;
   // margin-left: auto;
   // margin-top: 30px;
-  font-size: 35pt;
+  font-size: 30pt;
   text-align: center;
   border-radius: 10px;
   font-family: neon;
@@ -123,12 +118,23 @@ body{
 
 }
 
+#getGames{
+  height: 80px;
+  width: 300px;
+  float: left;
+  display: none;
+  font-size: 31pt;
+
+
+}
 
 #signIn{
   display: block;
   height: 80px;
   width: 300px;
   float: left;
+  font-size: 31pt;
+
 }
 
 #signOut{
@@ -137,6 +143,8 @@ body{
   width: 300px;
   float: right;
   visibility: hidden;
+  font-size: 31pt;
+
 }
 
 
@@ -234,8 +242,8 @@ body{
 .flux {
   font-family: neon;
   color: #426DFB;
-  font-size: 9vw;
-  line-height: 9vw;
+  font-size: 30pt;
+  // line-height: 9vw;
   text-shadow: 0 0 0vw #2356FF;
 }
 
@@ -360,5 +368,53 @@ fieldset{
   font-family: arial;
 }
 
+// modal 2
+#gameHistory{
+  height: 600px;
+  width: 100%;
+  display: block;
+  overflow: scroll;
+  overflow-x: hidden;
+  color: orange;
+  font-family: neon;
+  font-size: 20pt;
+  padding-left: 5%;
+}
 
+.modalTwo {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: hidden; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-two-content {
+  background-color: black;
+  border-color: rgba(35, 194, 230, 0.747);
+  margin: 5% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border-style: solid;
+  border-width: 5px;
+  width: 55%; /* Could be more or less, depending on screen size */
+  height: 700px;
+  border-radius: 10px;
+  // text-align: center;
+}
+/* The Close Button */
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 //end of modal
+
+
